# dimensionality-reduction

./: .gitignore  Approx_Algo.py  Copy_of_Embedding_General_Metrics_into_Low_Dim_Space.ipynb  Embedding General Metrics into Low Dim Space.ipynb  MANIFEST.in  Metric_Spaces.py  README.md  Tests.py  approx_algo.py  distortion_measures.py  examples.ipynb  experiments.py  metric_spaces.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_installation.py
.ipynb_checkpoints/: Embedding General Metrics into Low Dim Space-checkpoint.ipynb  examples-checkpoint.ipynb
examples/: class_based_usage.py  comparison_experiments.py
outputs/: Sigma_exp (Fig 2b) JL_PCA_Isomap.py  images  sigma_exp_JL_iso_PCA_Fig 2(a).py
src/dimensionality_reduction/: __init__.py  algorithms.py  exceptions.py  metrics.py  reducers.py  spaces.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_exceptions.py  test_metrics.py  test_reducers.py  test_spaces.py
