[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimensionality-reduction"
version = "0.1.0"
description = "Dimensionality reduction with provable guarantees"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ora Fandina"}
]
maintainers = [
    {name = "Ora Fandina"}
]
keywords = ["dimensionality-reduction", "machine-learning", "optimization", "convex-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "cvxpy>=1.2.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
examples = [
    "torch>=1.10.0",
    "torchvision>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/dimensionality-reduction"
Documentation = "https://github.com/your-repo/dimensionality-reduction"
Repository = "https://github.com/your-repo/dimensionality-reduction"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/dimensionality_reduction --cov-report=html --cov-report=term-missing"

